[package]
name = "excel2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
umya-spreadsheet = "0.9.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
clap = { version = "4.1.13", features = [ "derive" ]}

# eframe = "0.22.0"
# rfd = "0.11.4"
